# meshReaderLib

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
mesh/: mesh2D.bnd  mesh2D.cel  mesh2D.inp  mesh2D.vrt  mesh3D.bnd  mesh3D.cel  mesh3D.inp  mesh3D.vrt
src/: CMakeLists.txt
src/mesh/meshReader/meshReaderBase/: CMakeLists.txt  meshReaderBase.cpp  meshReaderBase.hpp  meshReaderBase.tpp
src/mesh/meshReader/starCD/: CMakeLists.txt  starCD.cpp  starCD.hpp  starCD.tpp
src/utilities/fileReader/: CMakeLists.txt  fileReader.cpp  fileReader.hpp  fileReader.tpp
src/utilities/stringHandler/: CMakeLists.txt  stringHandler.cpp  stringHandler.hpp  stringHandler.tpp
src/utilities/types/: CMakeLists.txt  enums.hpp  types.hpp
tests/: CMakeLists.txt  meshReaderTests.cpp  starCDReadBoundaries2DTest.cpp  starCDReadBoundaries3DTest.cpp  starCDReadCells2DTest.cpp  starCDReadCells3DTest.cpp  starCDReadCoordinates2DTest.cpp  starCDReadCoordinates3DTest.cpp
